--- a/templates/admin/plant_prview.html
+++ b/templates/admin/plant_prview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>植物检疫证书</title>
 </head>
-<body style="text-align: center">
-<img src="/manage/plant_preview_img?id={{ id }}" height="100%">
+<body>
+<img src="/manage/plant_preview_img?id={{ id }}" width="100%">
 </body>
 </html>
